--- a/index.html
+++ b/index.html
@@ -10,6 +10,82 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/logo.png" alt="illustration of a watering can">
+
+            </div>
+            <div class="links">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#shop">Plants</a>
+                <a href="">Contact</a>
+
+            </div>
+        </nav>
+    </header>
+    <section id="home">
+        <div class="titles">
+            <h1>The Watering Can</h1>
+            <button>Shop Our Indoor Plant Sale</button>
+        </div>
+    </section>
+    <section id="about">
+        <div>
+            <h2>Our Story</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus aspernatur eveniet aliquam nulla. Laboriosam distinctio non, tempore omnis expedita obcaecati quas nostrum ipsam perspiciatis facilis facere, quibusdam eveniet tenetur voluptas!</p>
+        </div>
+    </section>
+    <section id="shop">
+        <h2>Our Plants</h2>
+        <div class="container">
+            <div class="bg-img succulents"></div>
+            <div class="class">shopText</div>
+                <div>
+                    <h3>Succulents</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, deleniti numquam error laudantium optio nemo, aliquam est totam libero repellat earum placeat sed. Accusantium molestias totam eos enim repellat veniam.</p>
+                    <button>Shop Now!</button>
+                </div>
+        </div>
+        <div class="container">
+            <div class="shopText">
+                <div>
+                    <h3>Cacti</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolorem aperiam ipsa deleniti, consectetur necessitatibus pariatur eius similique cum quod deserunt assumenda omnis, ullam nulla dicta animi impedit? Inventore, et?</p>
+                    <button>Shop Now!</button>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="bg-img tropicals"></div>
+            <div class="shopText"></div>
+                <div>
+                    <h3>
+                        tropicals
+                    </h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo dolorem ratione quos asperiores ipsum voluptatem, dicta voluptatum architecto, tempore nostrum cumque qui magnam quaerat amet sit corporis inventore? Doloremque, eum.</p>
+                        <button>Shop Now!</button>
+                </div>
+        </div>
+    </section>
+    <footer id="contact">
+        <h2>Get In Touch</h2>
+        <div class="left">
+            <div>
+                <h3>Find Us Here:</h3>
+                <address>123 Plant Lane<br>
+                Bloomfield, Ontario<br>
+            Canada, L2G 0x7</address>
+            <a href="tel:+1-613-978-8282">+1-613-978-8282</a><br>
+            <a href="mailto:info@thewateringcan.com">info@thewateringcan.ca</a>
+            <p>Find us on the socials @thewateringcan</p>
+            </div>
+            <div class="right">
+                <img src="images/shop.jpg" alt="a photo of the inside of our retail space">
+            </div>
+        </div>
+        <p>Copyright Bradley Cummings 2021</p>
+    </footer>
 </body>
 </html>
