--- a/index.html
+++ b/index.html
@@ -10,6 +10,80 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/logo.png" alt="illustration of a watering can">
+            </div>
+            <div class="links">
+                <a href="#top">Home</a>
+                <a href="#about">About</a>
+                <a href="#shop">Plants</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </nav>
+    </header>
+    <section id="top">
+        <div class="titles">
+            <h1>The Watering Can</h1>
+            <button>Shop Our Indoor Plant Sale</button>
+        </div>
+
+    </section>
+    <section id="about">
+        <div class="txt">
+            <h2>Our Story</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, doloribus. Quae id, vel sint excepturi quam exercitationem ea sapiente itaque illo laudantium, dignissimos est, magnam neque suscipit sit cum culpa!</p>
+        </div>
+    </section>
+    <section id="shop">
+        <h2>Our Plants</h2>
+        <div class="container"><!-- Big div that wraps around little boxes-->
+            <div class="bgimg">
+
+            </div>
+            <div class="shoptxt">
+                <div>
+                    <h3>Cacti</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sapiente cupiditate in odio aut tenetur eos quae? Molestias error molestiae repudiandae quibusdam eveniet quas iusto exercitationem? Ratione sequi natus totam.</p>
+                </div>
+                <div class="bgimg cacti">
+
+                </div>
+                <div class="bgimg tropicals">
+
+                </div>
+                <div class="shoptxt">
+                    <div>
+                        <h3>Tropicals</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, repudiandae incidunt. Quaerat provident quae praesentium, accusamus voluptas ducimus facere possimus itaque obcaecati alias. Nemo perferendis laborum aliquam natus unde sequi?</p>
+                    </div>
+                </div>
+            </div>
+
+        </div><!--closes big div-->
+    </section>
+    <footer id="contact">
+        <h2>Get In Touch</h2>
+        <div class="left">
+            <div>
+                <h3>Find Us Here:</h3>
+                <address>123 Plant Lane <br>
+                Boomfield Ontario<br>
+                Canada, L2G 0X6</address><br>
+                <a href="tel: 1-613-978-8282">613-978-8282</a><br>
+                <a href="mailto: info@thewateringcan.ca">info@thewateringcan.ca</a>
+                <p>@thewateringcan on the socials</p>
+            </div>
+
+        </div>
+        <div class="right">
+
+        </div>
+        <div class="bottom">
+            <p>Copyright 2021</p>
+        </div>
+
+    </footer>
 </body>
 </html>
