additional changes made to html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!--Viesport meta tag sets up mobile browser to read your media queries-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Add Google Fonts here-->
 
@@ -39,28 +40,34 @@
     <section id="shop">
         <h2>Our Plants</h2>
         <div class="container"><!-- Big div that wraps around little boxes-->
-            <div class="bgimg">
-
+            <div class="bgimg succlants">
+            </div>
+            <div class="shoptxt">
+                <div>
+                    <h3>Succulants</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa deleniti beatae earum modi, possimus dignissimos maiores esse vitae ex sequi officia. Impedit nemo possimus incidunt earum nulla suscipit ipsam eligendi!</p>
+                </div>
             </div>
             <div class="shoptxt">
                 <div>
                     <h3>Cacti</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et sapiente cupiditate in odio aut tenetur eos quae? Molestias error molestiae repudiandae quibusdam eveniet quas iusto exercitationem? Ratione sequi natus totam.</p>
-                </div>
-                <div class="bgimg cacti">
-
-                </div>
-                <div class="bgimg tropicals">
-
-                </div>
-                <div class="shoptxt">
-                    <div>
-                        <h3>Tropicals</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, repudiandae incidunt. Quaerat provident quae praesentium, accusamus voluptas ducimus facere possimus itaque obcaecati alias. Nemo perferendis laborum aliquam natus unde sequi?</p>
-                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati nemo itaque quo, consequatur commodi nobis similique vel ratione perferendis. Impedit error assumenda eveniet voluptatem expedita accusamus architecto reiciendis perspiciatis culpa.</p>
+                    <button>Shop Now!</button>
                 </div>
             </div>
-
+            <div class="bgimg cacti">
+                <!-- empty div - img in css-->
+            </div>
+            <div class="bgimg tropicals">
+                <!--empty div - img in css-->
+            </div>
+            <div class="shoptxt">
+                <div>
+                   <h3>Tropicals</h3>
+                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nostrum enim itaque rerum expedita maiores fuga! Eveniet officiis sed nobis deserunt. Quod blanditiis magni itaque officia sequi quaerat assumenda maxime.</p>
+                   <button>Shop Now!</button>
+                </div>
+            </div>
         </div><!--closes big div-->
     </section>
     <footer id="contact">
