--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <!--Viesport meta tag sets up mobile browser to read your media queries-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Add Google Fonts here-->
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Source+Sans+Pro&display=swap" rel="stylesheet">    
     <!--Link your stylesheet here-->
+<link rel="stylesheet" href="css/index.css">
 
     <title>Document</title>
 </head>
@@ -40,28 +42,28 @@
     <section id="shop">
         <h2>Our Plants</h2>
         <div class="container"><!-- Big div that wraps around little boxes-->
-            <div class="bgimg succlants">
+            <div class="bgimg succlants one">
             </div>
-            <div class="shoptxt">
+            <div class="shoptxt two">
                 <div>
                     <h3>Succulants</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa deleniti beatae earum modi, possimus dignissimos maiores esse vitae ex sequi officia. Impedit nemo possimus incidunt earum nulla suscipit ipsam eligendi!</p>
                 </div>
             </div>
-            <div class="shoptxt">
+            <div class="shoptxt four">
                 <div>
                     <h3>Cacti</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati nemo itaque quo, consequatur commodi nobis similique vel ratione perferendis. Impedit error assumenda eveniet voluptatem expedita accusamus architecto reiciendis perspiciatis culpa.</p>
                     <button>Shop Now!</button>
                 </div>
             </div>
-            <div class="bgimg cacti">
+            <div class="bgimg cacti three">
                 <!-- empty div - img in css-->
             </div>
-            <div class="bgimg tropicals">
+            <div class="bgimg tropicals five">
                 <!--empty div - img in css-->
             </div>
-            <div class="shoptxt">
+            <div class="shoptxt six">
                 <div>
                    <h3>Tropicals</h3>
                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus nostrum enim itaque rerum expedita maiores fuga! Eveniet officiis sed nobis deserunt. Quod blanditiis magni itaque officia sequi quaerat assumenda maxime.</p>
@@ -79,18 +81,17 @@
                 Boomfield Ontario<br>
                 Canada, L2G 0X6</address><br>
                 <a href="tel: 1-613-978-8282">613-978-8282</a><br>
-                <a href="mailto: info@thewateringcan.ca">info@thewateringcan.ca</a>
+                <a href="mailto:info@thewateringcan.ca">info@thewateringcan.ca</a>
                 <p>@thewateringcan on the socials</p>
             </div>
 
         </div>
         <div class="right">
-
+            <img src="images/shop.jpg" alt="image of shop space inside of the watering can">
         </div>
         <div class="bottom">
             <p>Copyright 2021</p>
         </div>
-
     </footer>
 </body>
 </html>
